# singkana

./: .cursorrules  .gitattributes  .gitignore  CHANGELOG_20260114.md  DEPLOY.md  IMPLEMENTATION_SUMMARY_20260114.md  README.md  VERSION  analyze_feedback.py  app_web.py  app_web.py.bak_20251204_004230  app_web.py.bak_20251204_004514  app_web.py.bak_before_canonical_2026-01-03_155710  app_web.py.bak_before_canonical_2026-01-03_155940  app_web.py.broken.2026-01-06_010705  app_web.py.broken.2026-01-12_225405  app_web.py.broken_2026-01-03_160539  app_web.py.lock.v1.9.0-feedback-stable  app_web.py.lock.v1.9.0-feedback-stable.sha256  app_web.py.redacted  audit_no_traces.py  check_db.sh  check_production_readiness.sh  check_sheet_paywall_flow.sh  create_favicons.py  index.html  index.html.bak_20251204_004230  index.html.bak_20251204_013452  index.html.bak_20251204_212152  index.html.bak_theme  index_backup_20251204_213716.html  index_backup_20251204_221121.html  index_en_final.html  index_en_updated.html  package-lock.json  package.json  paywall_gate.js  privacy.html  privacy.html.bak_20251204_213225  purge_sensitive_data.py  (+28 more)
.sca/: 30_DEV_PROD.md  40_VPS_DEPLOY.md  41_SYSTEMD_CANONICAL.md  50_SECURITY.md  60_CONVERSION_PHILOSOPHY.md  70_PRODUCT_HUNT.md  71_HTTPS_SETUP.md  72_DEV_PRO_OVERRIDE.md
ugc-factory/api/: Dockerfile  pyproject.toml
ugc-factory/api/src/app/: config.py  db.py  main.py  models.py
ugc-factory/api/src/app/routes/: jobs.py
ugc-factory/api/src/app/services/: finalize_queue.py  idempotency.py  llm.py  prompts.py  safety.py  storage.py  tts.py  video.py
(+92 files in other folders)
