[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ugc-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "boto3>=1.34",
  "redis>=5.0",
  "httpx>=0.27",
  "orjson>=3.10",
]

[tool.setuptools]
package-dir = {""="src"}

[tool.setuptools.packages.find]
where = ["src"]

